--- a/app/pug/cards/_card-twothird-third-slider.pug
+++ b/app/pug/cards/_card-twothird-third-slider.pug
@@ -28,27 +28,27 @@
 				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 
-	.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
+	.card-full-slider-wrap.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
-				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+				.card__imgbox(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl = 'img/article-img-01.jpg';
-				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+				.card__imgbox(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
-				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
+				.card__imgbox(style='background-image: url('+imgUrl+')', data-target="#modal-content-slider", data-toggle="modal", data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
 
 		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl = 'img/article-img-01.jpg';
-				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
+				.card__imgbox(style='background-image: url('+imgUrl+')',  data-target="#modal-content-slider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
