--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -104,7 +104,7 @@ block content
 								.card-links__right
 									a.card-links__lnk.card-links__lnk_small.link-special.color-thin(href="") Удалить
 							.card-links__lnkbox
-								a.card-links__lnk.text-ddd.color-thin(href="")= item.content
+								a.card-links__lnk.mobile-dark(href="")= item.content
 	include modules/_main-icons
 	.row
 		.col-12
@@ -129,7 +129,7 @@ block content
 									strong Еремина
 									strong Наталья
 									strong Константиновна
-									| Председатель правления ОМК
+								p Председатель правления ОМК
 							button.button.button-border.button-width-142.button-height-30 Поздравить
 
 	.row
