--- a/app/sass/_main-icons.scss
+++ b/app/sass/_main-icons.scss
@@ -26,6 +26,9 @@
 					text-decoration: none;
 				}
 			}
+			.card-links__lnk.mobile-dark {
+				color: #d0d1d3;
+			}
 
 			//.main-icon__title {
 			//	cursor: default;
