--- a/app/pug/cards/_card-half-slider-galery.pug
+++ b/app/pug/cards/_card-half-slider-galery.pug
@@ -1,7 +1,7 @@
 if cardSettings === undefined
 	-var cardSettings = {};
 .card.card-full.card-full-slider
-	.card-full-slider-wrap.card-wrap.card-full-wrap
+	.card-full-slider-wrap.card-wrap.card-full-wrap.mobile-hide
 		.card-full-slider__item
 			.card__imgwrap
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
@@ -14,3 +14,29 @@ if cardSettings === undefined
 			.card__imgwrap
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
 				.card__imgbox.card__imgbox_half(class=cardSettings.advantClass, style='background-image: url(img/block-img-05.jpg)')
+
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/block-img-01.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/block-img-05.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/article-img-01.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				.card__imgbox(class=cardSettings.advantClass, style='background-image: url(img/block-img-05.jpg)')
