--- a/app/pug/cards/_card-mosaic-slider.pug
+++ b/app/pug/cards/_card-mosaic-slider.pug
@@ -1,75 +1,99 @@
 .card.card-full.card-full-slider
-	.card-full-slider-wrap.card-wrap.card-full-wrap
+	.card-full-slider-wrap.card-wrap.card-full-wrap.mobile-hide
 		//- - var i = '01';
 		- var imgClass = '';
 		- var imgBoxClass ='';
+		- var allImages = [];
 
 		.card-full-slider__item
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/article-img-02.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-02.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-12.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-03.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-07.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 						
 				- var imgUrl = 'img/block-img-01.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-06.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-10.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 		.card-full-slider__item
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-01.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-02.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-10.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-03.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-07.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 						
 				- var imgUrl = 'img/block-img-01.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 			.card__imgwrap.margin-bottom-15
 				- var imgUrl = 'img/block-img-06.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_third.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
 				- var imgUrl = 'img/block-img-10.jpg';
+				- allImages.push(imgUrl)
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
+
+	.card-full-slider-wrap.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
+		each item in allImages
+			.card-full-slider__item
+				.card__imgwrap
+					.card__imgbox(style='background-image: url(' + item + ')', class=imgBoxClass)
+						img(src=item, class=imgClass)
