--- a/app/pug/cards/_card-third-twothird-slider.pug
+++ b/app/pug/cards/_card-third-twothird-slider.pug
@@ -1,5 +1,5 @@
 .card.card-full.card-full-slider
-	.card-full-slider-wrap.card-wrap.card-full-wrap
+	.card-full-slider-wrap.card-wrap.card-full-wrap.mobile-hide
 		.card-full-slider__item
 			.card__imgwrap
 				a.card__imgbox.card__imgbox_third(href="#", style='background-image: url(img/article-img-01.jpg)')
@@ -8,3 +8,21 @@
 			.card__imgwrap
 				a.card__imgbox.card__imgbox_third(href="#", style='background-image: url(img/article-img-01.jpg)')
 				a.card__imgbox.card__imgbox_twothird(href="#", style='background-image: url(img/article-img-02.jpg)')
+
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-mobile-slider-wrap.card-wrap.card-full-wrap.mobile-show
+		.card-full-slider__item
+			.card__imgwrap
+				a.card__imgbox(href="#", style='background-image: url(img/article-img-01.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				a.card__imgbox(href="#", style='background-image: url(img/article-img-02.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				a.card__imgbox(href="#", style='background-image: url(img/article-img-01.jpg)')
+
+		.card-full-slider__item
+			.card__imgwrap
+				a.card__imgbox(href="#", style='background-image: url(img/article-img-02.jpg)')
