--- a/app/sass/_cards.scss
+++ b/app/sass/_cards.scss
@@ -27,6 +27,18 @@
 			color: $light-color;
 		}
 	}
+	&.mobile-hide {
+		display: block;
+		@include sm-block {
+			display: none;
+		}
+	}
+	&.mobile-show {
+		display: none;
+		@include sm-block {
+			display: block;
+		}
+	}
 	&-wrap {
 		position: relative;
 		display: flex;
@@ -46,6 +58,18 @@
 			z-index: 1;
 			height: 100%;
 			width: 100%;
+		}
+		&.mobile-hide {
+			display: block;
+			@include sm-block {
+				display: none;
+			}
+		}
+		&.mobile-show {
+			display: none;
+			@include sm-block {
+				display: block;
+			}
 		}
 	}
 	&_slim {
@@ -378,15 +402,15 @@
 			font-size: 15px;
 		}
 		@include md-block {
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 			min-height: 30px;
-			max-height: 30px;
+			//max-height: 30px;
 			font-size: 9px;
 
 
 		}
 		@include xs-block {
-			max-height: 67px;
+			//max-height: 67px;
 			font-size: 18px;
 			min-height: auto;
 		}
@@ -403,7 +427,7 @@
 				text-decoration: underline;
 			}
 			@include md-block {
-				max-height: 30px;
+				//max-height: 30px;
 			}
 		}
 
@@ -425,8 +449,8 @@
 				font-size: 15px;
 			}
 			@include md-block {
-				font-size: 9px;
-				margin-bottom: 6px;
+				font-size: 10px;
+				margin-bottom: 5px;
 			}
 			@include xs-block {
 				font-size: 16px;
@@ -529,9 +553,13 @@
 		box-sizing: content-box;
 		@include md-block {
 			padding-right: 8px;
+			margin-bottom: 8px;
 		}
 		&:nth-child(5n) {
 			padding-right: 0;
+			@include lg-block {
+				padding-right: 8px;
+			}
 			@include xs-block {
 				padding-right: 8px;
 			}
@@ -548,7 +576,7 @@
 			padding: 15px;
 			text-align: center;
 			@include md-block {
-				width: 96px;
+				width: 94px;
 				height: 72px;
 				line-height: 36px;
 			}
@@ -595,8 +623,8 @@
 			padding-left: 15px;
 			padding-right: 15px;
 			@include md-block {
-				padding-left: -7.5px;
-				padding-right: -7.5px;
+				padding-left: 7.5px;
+				padding-right: 7.5px;
 			}
 		}
 		&-number {
@@ -883,7 +911,10 @@
 					height: 100%;
 					border: 1px solid #dddee0;
 					border-radius: 5px;
-
+					@include md-block {
+						left: 7.5px;
+						right: 7.5px;
+					}
 				}
 			}
 		}
@@ -1473,9 +1504,16 @@
 		}
 		@include md-block {
 			width: 165px;
+			text-align: left;
 		}
 		@include sm-block {
 			width: 120px;
+		}
+		.card-links__lnk {
+			@include md-block {
+				width: 165px;
+				text-align: left;
+			}
 		}
 	}
 	&__right {
@@ -1508,7 +1546,14 @@
 			font-size: 10px;
 			line-height: 1.2;
 		}
-
+		//.card-links__lnk {
+		//	@include md-block {
+		//		color: #000000;
+		//		&.color-thin {
+		//			color: #a1a3a7;
+		//		}
+		//	}
+		//}
 		.link-icon-save {
 
 			position: absolute;
@@ -1527,6 +1572,7 @@
 			@include lg-block {
 				opacity: 1;
 				font-size: 14px;
+				top: 2px;
 			}
 			@include sm-block {
 				left: -20px;
@@ -1571,14 +1617,18 @@
 		height: auto;
 		min-height: auto;
 		@include lg-block {
-			font-size: 12px;
+			font-size: 17px;
+			line-height: 1.2;
 		}
-		@include md-block {
-			font-size: 11px;
+		&.mobile-dark {
+			@include md-block {
+				color: #000000;
+			}
 		}
 
 		@include sm-block {
 			font-size: 16px;
+
 		}
 
 		&.color-thin {
@@ -1665,8 +1715,8 @@
 		line-height: 14px;
 		@include md-block {
 			font-size: 8px;
-			line-height: 1.4;
-			margin-bottom: 10px;
+			line-height: 1.3;
+			margin-bottom: 5px;
 			@include xs-block {
 				font-size: 14px;
 			}
@@ -1674,7 +1724,7 @@
 		p {
 			margin-bottom: 10px;
 			@include md-block {
-				margin-bottom: 0;
+				margin-bottom: 5px;
 			}
 			strong {
 				display: block;
