--- a/app/sass/_comment-dark.scss
+++ b/app/sass/_comment-dark.scss
@@ -8,6 +8,9 @@
 	@include lg-block {
 		padding: 15px 30px;
 	}
+	@include md-block {
+		margin-top: 18px;
+	}
 	@include xs-block {
 		margin-top: 15px;
 		padding: 15px 15px;
@@ -51,7 +54,7 @@
 			}
 		}
 		&__username {
-			margin-top: 2.5px;
+			//margin-top: 2.5px;
 			@include xs-block {
 				//font-size: 6px;
 				//margin: 0;
