--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -302,9 +302,10 @@
 			font-size: 10px;
 		}
 		@include md-block {
-			font-size: 10px;
+			font-size: 9px;
 			line-height: 1.4;
 			vertical-align: top;
+			margin-left: 6px;
 		}
 		@include sm-block {
 			font-size: 16px;
