--- a/app/pug/honour.pug
+++ b/app/pug/honour.pug
@@ -20,7 +20,7 @@ block content
 	.card.card-slider.card-fifth-slider
 		.card-wrap.card-slider-wrap.card-fifth-slider-wrap
 			each item in items
-				.card-slider__item.card-fifth-slider__item.tooltip-mouse(data-toggle="tooltip", title="Подразделение № 14512 ВМЗ 25. Переработка материалов")
+				.card-slider__item.card-fifth-slider__item.tooltip-mouse(title="Подразделение № 14512 ВМЗ 25. Переработка материалов")
 					.card-fifth-slider__imgbox.card__imgbox.margin-bottom-10(style=item.url)
 					.card-fifth-slider__title
 						p= item.name
@@ -31,7 +31,7 @@ block content
 	.card.card-slider.card-fifth-slider
 		.card-wrap.card-slider-wrap.card-fifth-slider-wrap
 			each item in items
-				.card-slider__item.card-fifth-slider__item
+				.card-slider__item.card-fifth-slider__item.tooltip-mouse(title="Подразделение № 14512 ВМЗ 25. Переработка материалов")
 					.card-fifth-slider__imgbox.card__imgbox.margin-bottom-10(style=item.url)
 					.card-fifth-slider__title
 						p= item.name
@@ -42,7 +42,7 @@ block content
 	.card.card-slider.card-fifth-slider
 		.card-wrap.card-slider-wrap.card-fifth-slider-wrap
 			each item in items
-				.card-slider__item.card-fifth-slider__item
+				.card-slider__item.card-fifth-slider__item.tooltip-mouse(title="Подразделение № 14512 ВМЗ 25. Переработка материалов")
 					.card-fifth-slider__imgbox.card__imgbox.margin-bottom-10(style=item.url)
 					.card-fifth-slider__title
 						p= item.name
