--- a/app/pug/blocks/_block-imgl-text.pug
+++ b/app/pug/blocks/_block-imgl-text.pug
@@ -16,7 +16,7 @@
 					p
 	.col-md-8
 		.card
-			.card__text
+			.card__text.card__preview_sm
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 .row
@@ -27,7 +27,7 @@
 					p
 	.col-md-8
 		.card
-			.card__text
+			.card__text.card__preview_sm
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 				p
