--- a/app/pug/blocks/_block-min-imgl-text.pug
+++ b/app/pug/blocks/_block-min-imgl-text.pug
@@ -27,7 +27,7 @@
 					p
 	.col-md-9
 		.card
-			.card__text
+			.card__text.card__preview_xs
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 
@@ -40,7 +40,7 @@
 
 	.col-md-9
 		.card
-			.card__text
+			.card__text.card__preview_xs
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став...
 				a.button.card__more(href='#') Читать далее
@@ -53,6 +53,6 @@
 					p
 	.col-md-9
 		.card
-			.card__text
+			.card__text.card__preview_xs
 				p
 					| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
