--- a/app/pug/blocks/_block-text-imgr.pug
+++ b/app/pug/blocks/_block-text-imgr.pug
@@ -11,7 +11,7 @@
 .row
   .col-md-8
     .card
-      .card__text.text-ddd-210
+      .card__text.card__preview_sm
         p
           | Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
   .col-md-4
@@ -22,7 +22,7 @@
 .row
   .col-md-8
     .card
-      .card__text.text-ddd-210
+      .card__text.card__preview_sm
         p
           | Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном...
         p
