--- a/app/pug/profile.pug
+++ b/app/pug/profile.pug
@@ -145,23 +145,23 @@ block content
 						p
 		.col-12.col-sm-8
 			.card
-				.card__text.text-ddd-210
+				.card__text.card__preview_sm
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.
 
 	.row
 		.col-12.col-sm-4
 			.card
-				a.card-third__imgbox.card__imgbox(href="#", style='background-image: url(img/block-img-13.jpg);')
+				a.card__imgbox.card__imgbox_sm(href="#", style='background-image: url(img/block-img-13.jpg);')
 					.card-warning-text.hide
 						p
 		.col-12.col-sm-8
 			.card
-				.card__text.text-ddd-210
+				.card__text.card__preview_sm
 					p
 						| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...
 					p
-						| Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс
+						| Литейно-прокатный комплекс - уникальное для...
 					a.button.card__more(href='#') Читать далее
 
 
