--- a/app/pug/honour.pug
+++ b/app/pug/honour.pug
@@ -24,6 +24,8 @@ block content
 					.card-fifth-slider__imgbox.card__imgbox.margin-bottom-10(style=item.url)
 					.card-fifth-slider__title
 						p= item.name
+					.card__text.d-block.d-lg-none.text-center.font-size-12.margin-top-5
+						p Подразделение № 14512 ВМЗ 25. Переработка материалов
 	.card.margin-bottom-15
 		.content-title
 			.content-titlebox
