--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10120,7 +10120,8 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .card-calendar .ui-datepicker-header .ui-datepicker-title * {
-    font-size: 12px;
+    font-size: 13px;
+    line-height: 1.6;
   }
 
   .card-calendar td {
@@ -10354,7 +10355,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .content-subtitle h3 {
-    font-size: 10px;
+    font-size: 18px;
   }
 
   .content-text {
@@ -11009,6 +11010,12 @@ select.form-control:not([size]):not([multiple]) {
     min-width: 95px;
   }
 
+  .form__text {
+    display: block;
+    margin: 0;
+    line-height: 1.3;
+  }
+
   .modal-main-slider-wrap_bottom {
     display: none;
   }
@@ -11166,10 +11173,6 @@ select.form-control:not([size]):not([multiple]) {
     font-size: 12px;
   }
 
-  .card-calendar .ui-datepicker-header .ui-datepicker-title * {
-    font-size: 9px;
-  }
-
   .article-blockquote {
     font-size: 16px;
   }
@@ -11297,6 +11300,13 @@ select.form-control:not([size]):not([multiple]) {
     line-height: normal;
   }
 
+  .form__button {
+    font-size: 12px;
+    min-width: 146px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
   .form-checkbox {
     display: block;
   }
@@ -11420,7 +11430,7 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .content-text p {
-    font-size: 16px;
+    font-size: 13px;
     margin-bottom: 10px;
   }
 
@@ -11571,10 +11581,14 @@ select.form-control:not([size]):not([multiple]) {
     margin-bottom: 6px;
   }
 
+  .card-tabs .nav-tabs .nav-link.active {
+    padding-top: 5px;
+    padding-bottom: 6px;
+  }
+
   .card-tabs .nav-link {
     font-size: 8px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 6px 12px;
   }
 
   .card-links__img {
@@ -11595,21 +11609,18 @@ select.form-control:not([size]):not([multiple]) {
     max-width: 110px;
   }
 
+  .card-calendar .ui-datepicker-header {
+    margin-bottom: 2px;
+  }
+
   .card-calendar .ui-datepicker-header .content-subtitle {
     margin-bottom: 5px;
   }
 
   .card-calendar .ui-datepicker-header .content-subtitle h2 {
-    font-size: 9px;
+    font-size: 14px;
+    line-height: 1.7;
     margin-bottom: 0;
-  }
-
-  .card-calendar .ui-datepicker-header .ui-datepicker-title * {
-    font-size: 8px;
-  }
-
-  .card-calendar thead tr th {
-    font-size: 8px;
   }
 
   .card-calendar td {
