--- a/app/sass/_content.scss
+++ b/app/sass/_content.scss
@@ -131,7 +131,8 @@
 			font-size: 16px;
 			font-weight: inherit;
 			@include md-block {
-				font-size: 10px;
+				//font-size: 10px;
+				font-size: 18px;
 			}
 		}
 		span {
@@ -193,7 +194,8 @@
 				margin-bottom: 0;
 			}
 			@include xs-block {
-				font-size: 16px;
+				//font-size: 16px;
+				font-size: 13px;
 				margin-bottom: 10px;
 			}
 			.light {
