--- a/app/sass/general/_form.scss
+++ b/app/sass/general/_form.scss
@@ -167,6 +167,11 @@ input, textarea {
 		font-weight: 300;
 		color: #a5a6aa;
 		vertical-align: middle;
+		@include sm-block {
+			display: block;
+			margin: 0;
+			line-height: 1.3;
+		}
 		&:last-child {
 			margin-right: 0;
 		}
@@ -305,6 +310,12 @@ input, textarea {
 		}
 		@include md-block {
 			min-width: 100px;
+		}
+		@include xs-block {
+			font-size: 12px;
+			min-width: 146px;
+			padding-top: 5px;
+			padding-bottom: 5px;
 		}
 		&_more {
 			color: $basic-color;
