--- a/app/css/style.css
+++ b/app/css/style.css
@@ -10157,6 +10157,10 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 @media screen and (max-width: 991.98px) {
+  body.modal-open .header:before {
+    margin-left: 0;
+  }
+
   .row {
     margin-right: -7.5px;
     margin-left: -7.5px;
@@ -10180,7 +10184,8 @@ select.form-control:not([size]):not([multiple]) {
   }
 
   .sign-title__link {
-    font-size: 10px;
+    font-size: 13px;
+    vertical-align: baseline;
   }
 
   .slider-arrow {
