--- a/app/pug/modules/_header.pug
+++ b/app/pug/modules/_header.pug
@@ -678,6 +678,7 @@ header.header.fixed.show
 									.form-checkbox-button-wrap
 										button.button.form-setting-button(type='reset', data-toggle='collapse', data-target='#header-nav-setting') Отмена
 										button.button.form-setting-button(type='submit', data-toggle='collapse', data-target='#header-nav-setting') Применить
+	// для кнопки развернуть если хэдэр в полоску
 	.menu-left-navigation
 		.container
 			.row
